få till att time sleep beror på ei